--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,49 @@
-aiofiles==0.6.0
-allennlp==0.1a6
-argon2-cffi==20.1.0
-attrs==21.2.0
-awscli==1.18.223
-backcall==0.2.0
-bleach==3.3.0
-blis==0.7.4
 boto==2.49.0
 boto3==1.10.12
-botocore==1.19.63
-catalogue==1.0.0
+botocore==1.13.12
 certifi==2019.9.11
-cffi==1.14.5
 chardet==3.0.4
 Click==7.0
-colorama==0.4.3
 cycler==0.10.0
-cymem==2.0.5
-decorator==5.0.9
-defusedxml==0.7.1
 docutils==0.15.2
-entrypoints==0.3
 flake8==3.9.0
 future==0.18.2
 gensim==3.8.1
 graphviz==0.14
-httptools==0.2.0
 idna==2.8
 importlib-metadata==2.1.1
-ipykernel==5.5.5
-ipython==7.9.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.17.2
-Jinja2==2.11.3
 jmespath==0.9.4
 joblib==0.14.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.1.0
-jupyter-core==4.6.3
 kiwisolver==1.1.0
-MarkupSafe==1.1.1
 matplotlib==3.0.3
 mccabe==0.6.1
-mistune==0.8.4
-murmurhash==1.0.5
-nbconvert==5.6.1
-nbformat==5.1.3
 nltk==3.5
-notebook==6.2.0
 numpy==1.17.3
-overrides==3.1.0
-packaging==20.9
-pandocfilters==1.4.3
-parso==0.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
 Pillow==6.2.1
+pip==20.3.4
 pkg-resources==0.0.0
-plac==1.1.3
-preshed==3.0.5
-prometheus-client==0.10.1
-prompt-toolkit==2.0.10
-protobuf==3.17.1
-ptyprocess==0.7.0
-pyasn1==0.4.8
 pycodestyle==2.7.0
-pycparser==2.20
 pyflakes==2.3.1
-Pygments==2.9.0
-pyhocon==0.3.35
 pyparsing==2.4.7
-pyrsistent==0.17.3
 pyswip==0.2.9
 python-dateutil==2.8.0
-PyYAML==5.3.1
-pyzmq==20.0.0
-qtconsole==4.7.7
-QtPy==1.9.0
 regex==2019.11.1
 requests==2.22.0
-rsa==4.5
-s3transfer==0.3.7
+s3transfer==0.2.1
 sacremoses==0.0.35
-sanic==0.6.0
 scikit-learn==0.21.3
 scipy==1.3.1
-Send2Trash==1.5.0
 sentencepiece==0.1.83
+setuptools==41.6.0
 six==1.13.0
 smart-open==1.9.0
-spacy==2.3.5
-srsly==1.0.5
 style==1.1.0
-tensorboard-pytorch==0.7.1
-terminado==0.8.3
-testpath==0.5.0
-thinc==7.4.5
 tokenizers==0.10.1
 torch==1.5.1
 torchvision==0.3.0
-tornado==6.1
-tqdm==4.61.0
-traitlets==4.3.3
+tqdm==4.37.0
 transformers==2.3.0
-typing==3.7.4.3
-ujson==3.2.0
 update==0.0.1
 urllib3==1.25.6
-uvloop==0.14.0
-wasabi==0.8.2
-wcwidth==0.2.5
-webencodings==0.5.1
-websockets==7.0
-widgetsnbextension==3.5.1
+wheel==0.33.6
 zipp==1.2.0
